Fix login loader alignment

--- a/public/login/css/loadin.css
+++ b/public/login/css/loadin.css
@@ -1,7 +1,3 @@
-
-
-
-
 .c-loader {
   animation: is-rotating 1s infinite;
   border: 6px solid #e5e5e5;
@@ -10,10 +6,11 @@
   height: 50px;
   width: 50px;
   display: none;
-  justify-content: center;
-  align-items: center;
   position: absolute;
-
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 @keyframes is-rotating {
